<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carolynhemmings.checkbox.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#a0d7db">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:layout_marginTop="53dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title"
        android:layout_below="@+id/checkBoxTuttiFruity"
        android:id="@+id/showButtonid"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_show"
        android:id="@+id/showTextViewId"
        android:layout_below="@+id/showButtonid"
        android:layout_alignLeft="@+id/checkBoxTuttiFruity"
        android:layout_alignStart="@+id/checkBoxTuttiFruity"
        android:layout_marginTop="30dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vanilla_title"
        android:id="@+id/checkBoxVanilla"
        android:layout_marginTop="53dp"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"

        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_title"
        android:id="@+id/checkBoxChocolate"
        android:checked="false"
        android:layout_below="@+id/checkBoxVanilla"
        android:layout_alignLeft="@+id/checkBoxVanilla"
        android:layout_alignStart="@+id/checkBoxVanilla" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutti_fruity_title"
        android:id="@+id/checkBoxTuttiFruity"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:layout_below="@+id/checkBoxChocolate"
        android:layout_alignLeft="@+id/checkBoxChocolate"
        android:layout_alignStart="@+id/checkBoxChocolate" />
</RelativeLayout>
